--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,79 @@
 [versions]
-androidxCore = "1.7.0"
-androidx.lifecycle = "2.3.1"
+activityCompose = "1.7.2"
+androidxCore = "1.12.0"
+androidxLifecycle = "2.6.2"
+browser = "1.6.0"
+coilCompose = "2.2.2"
+desugar_jdk_libs = "2.0.3"
+espressoCore = "3.5.1"
+hiltCompiler = "2.48"
+hiltNavigationCompose = "1.0.0"
+junit = "4.13.2"
+junitVersion = "1.1.5"
+kotlinxCoroutinesTest = "1.7.1"
+lifecycleViewmodelSavedstate = "2.6.2"
+material = "1.5.1"
+material3 = "1.2.0-alpha08"
+robolectric = "4.9"
+roomRuntime = "2.5.2"
+runtimeLivedata = "1.5.1"
+truth = "1.1.3"
+turbine = "0.12.3"
+uiTestJunit4 = "1.5.1"
+workMultiprocess = "2.8.1"
 [libraries]
+
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+
+androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
+
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxCore" }
+
+androidx-espresso-core = { group  = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
+
+
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleViewmodelSavedstate" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelSavedstate" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelSavedstate" }
+androidx-lifecycle-viewmodel-savedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "lifecycleViewmodelSavedstate" }
+
+androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomRuntime" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomRuntime" }
+androidx-room-paging = { group = "androidx.room", name = "room-paging", version.ref = "roomRuntime" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomRuntime" }
+androidx-room-testing = { group = "androidx.room", name = "room-testing", version.ref = "roomRuntime" }
+
+
+
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "uiTestJunit4" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+
+androidx-work-multiprocess = { group = "androidx.work", name = "work-multiprocess", version.ref = "workMultiprocess" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workMultiprocess" }
+androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "workMultiprocess" }
+
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
+desugar_jdk_libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
+
+hilt-android = { group = "com.google.dagger", name ="hilt-android", version.ref = "hiltCompiler" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hiltCompiler" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltCompiler" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
+
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesTest" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
+
 [plugins]
