--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,12 @@
 [versions]
+androidGradlePlugin = "8.1.1"
+foundation = "1.6.0-alpha06"
+ksp = "1.9.10-1.0.13"
+kotlin = "1.9.10"
+hilt = "2.48"
+androidLibraryPlugin = "8.1.1"
+
+
 activityCompose = "1.7.2"
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
@@ -21,9 +29,13 @@ truth = "1.1.3"
 turbine = "0.12.3"
 uiTestJunit4 = "1.5.1"
 workMultiprocess = "2.8.1"
+org-jetbrains-kotlin-android = "1.9.10"
+appcompat = "1.6.1"
+com-google-android-material-material = "1.8.0"
 [libraries]
 
 androidx-espresso-core = { group  = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "uiTestJunit4" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -66,5 +78,13 @@ desugar_jdk_libs = { group = "com.android.tools", name = "desugar_jdk_libs", ver
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
 
 [plugins]
+android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+android-library = { id = "com.android.library", version.ref = "androidLibraryPlugin"}
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
