--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,6 @@ kotlin = "1.9.10"
 hilt = "2.48"
 androidLibraryPlugin = "8.1.1"
 
-
 activityCompose = "1.7.2"
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
@@ -22,6 +21,7 @@ kotlinxCoroutinesTest = "1.7.1"
 lifecycleViewmodelSavedstate = "2.6.2"
 material = "1.5.1"
 material3 = "1.2.0-alpha08"
+navigationCompose = "2.7.4"
 robolectric = "4.9"
 roomRuntime = "2.5.2"
 runtimeLivedata = "1.5.1"
@@ -36,6 +36,7 @@ com-google-android-material-material = "1.8.0"
 
 androidx-espresso-core = { group  = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "uiTestJunit4" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -67,6 +68,7 @@ hilt-android = { group = "com.google.dagger", name ="hilt-android", version.ref 
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hiltCompiler" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltCompiler" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
 
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
